# flutter_cv2_camera

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pubspec.yaml
docs/: README.md
example/: full_build_log.txt  pubspec.yaml
example/lib/: main.dart
lib/: flutter_cv2_camera.dart
lib/src/: cv2_camera_bindings.dart  cv2_camera_controller.dart  cv2_camera_model.dart  cv2_camera_web_bindings.dart  cv2_camera_widget.dart  utils.dart
linux/: CMakeLists.txt  flutter_cv2_camera_plugin.cc
native_cv2/: CMakeLists.txt  cv2_camera.cpp  cv2_camera.hpp  test.cpp
native_cv2/wasm/: CMakeLists.txt  cv2_camera_web.cpp
screenshots/: Screencast from 2025-07-03 13-20-54.webm
scripts/: build_cv2_camera_native.bash.sh  build_wasm.sh  setup_opencv_wasm.sh
test/: flutter_cv2_camera_test.dart
web/: CMakeLists.txt  cv2_camera_web_loader.js  index.html
